your message here

--- a/index.html
+++ b/index.html
@@ -6,8 +6,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Divvum — Split Smarter</title>
   <link rel="icon" type="image/avif" href="il_1080xN.1090093355_g454.avif" />
-  <link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=DM+Sans:wght@300;400;500&display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&display=swap" rel="stylesheet"/>
   <style>
+    @font-face {
+      font-family: 'Gilroy';
+      src: url('Gilroy-Medium.ttf') format('truetype');
+      font-weight: 500;
+      font-style: normal;
+    }
+    @font-face {
+      font-family: 'GilroyLight';
+      src: url('Gilroy-Light.ttf') format('truetype');
+      font-weight: 300;
+      font-style: normal;
+    }
+    @font-face {
+      font-family: 'GilroyRegular';
+      src: url('Gilroy-Regular.ttf') format('truetype');
+      font-weight: 400;
+      font-style: normal;
+    }
     *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
 
     :root {
@@ -23,7 +41,7 @@
 
 
     body {
-      font-family: 'DM Sans', sans-serif;
+      font-family: 'Gilroy', sans-serif;
       background: var(--bg-primary);
       color: var(--text-primary);
       min-height: 100vh;
@@ -91,7 +109,7 @@
       transition: color 0.5s ease;
     }
     .tiers-tagline p {
-      font-family: 'DM Sans', sans-serif;
+      font-family: 'Gilroy', sans-serif;
       font-size: clamp(1rem, 1.3vw, 1.2rem);
       font-weight: 300;
       line-height: 1.7;
@@ -330,7 +348,7 @@
       z-index: 1;
     }
     .w-status-time {
-      font-family: 'Syne', sans-serif;
+      font-family: 'GilroyLight', sans-serif;
       font-size: 0.6rem;
       font-weight: 700;
       color: var(--navy);
@@ -360,7 +378,7 @@
       height: 36px;
     }
     .welcome-hero h1 {
-      font-family: 'Syne', sans-serif;
+      font-family: 'GilroyLight', sans-serif;
       font-size: 1.6rem;
       font-weight: 800;
       letter-spacing: 0.14em;
@@ -381,7 +399,7 @@
       flex-direction: column;
     }
     .welcome-tagline {
-      font-family: 'Syne', sans-serif;
+      font-family: 'GilroyLight', sans-serif;
       font-size: 0.85rem;
       font-weight: 800;
       color: var(--navy);
@@ -390,7 +408,7 @@
       margin-bottom: 5px;
     }
     .welcome-sub {
-      font-family: 'DM Sans', sans-serif;
+      font-family: 'Gilroy', sans-serif;
       font-size: 0.58rem;
       color: var(--gray);
       line-height: 1.55;
@@ -405,7 +423,7 @@
       border: none;
       border-radius: 12px;
       padding: 10px 0;
-      font-family: 'DM Sans', sans-serif;
+      font-family: 'Gilroy', sans-serif;
       font-size: 0.6rem;
       font-weight: 600;
       cursor: pointer;
@@ -422,7 +440,7 @@
       margin: 0 0 8px;
     }
     .w-divider-line { flex: 1; height: 1px; background: rgba(0,0,0,0.08); }
-    .w-divider-text { font-size: 0.52rem; color: var(--gray); font-family: 'DM Sans', sans-serif; }
+    .w-divider-text { font-size: 0.52rem; color: var(--gray); font-family: 'Gilroy', sans-serif; }
     .w-terms {
       margin-top: auto;
       font-size: 0.47rem;
@@ -432,7 +450,7 @@
     }
     .w-terms a { color: var(--teal-dark); text-decoration: none; }
 
-    .s-greeting { font-family: 'Syne', sans-serif; font-weight: 800; font-size: 0.9rem; color: var(--navy); }
+    .s-greeting { font-family: 'GilroyLight', sans-serif; font-weight: 800; font-size: 0.9rem; color: var(--navy); }
     .s-brand { font-size: 0.6rem; letter-spacing: 0.18em; font-weight: 700; color: var(--teal); margin-bottom: 14px; }
 
     .s-card {
@@ -444,7 +462,7 @@
     }
     .s-card-top { display: flex; justify-content: space-between; align-items: center; margin-bottom: 12px; }
     .s-balance-label { font-size: 0.55rem; color: var(--gray); text-transform: uppercase; letter-spacing: 0.1em; }
-    .s-balance { font-family: 'Syne', sans-serif; font-size: 1.5rem; font-weight: 800; color: var(--teal); }
+    .s-balance { font-family: 'GilroyLight', sans-serif; font-size: 1.5rem; font-weight: 800; color: var(--teal); }
 
     .s-ring {
       width: 48px; height: 48px;
@@ -452,7 +470,7 @@
       border: 3.5px solid var(--teal);
       display: flex; flex-direction: column;
       align-items: center; justify-content: center;
-      font-family: 'Syne', sans-serif;
+      font-family: 'GilroyLight', sans-serif;
       font-size: 0.62rem; font-weight: 700;
       color: var(--teal); line-height: 1.1;
     }
@@ -467,22 +485,22 @@
       overflow: hidden;
     }
     .s-stat { background: #f0faf7; padding: 7px 4px; text-align: center; }
-    .s-stat-n { font-family: 'Syne', sans-serif; font-size: 0.9rem; font-weight: 700; color: var(--navy); }
+    .s-stat-n { font-family: 'GilroyLight', sans-serif; font-size: 0.9rem; font-weight: 700; color: var(--navy); }
     .s-stat-l { font-size: 0.52rem; color: var(--gray); }
 
     .s-btns { display: flex; gap: 6px; margin-bottom: 12px; }
     .s-btn-main {
       flex: 1; background: var(--teal); color: white;
       border: none; border-radius: 100px; padding: 9px 0;
-      font-size: 0.65rem; font-weight: 600; font-family: 'DM Sans', sans-serif;
+      font-size: 0.65rem; font-weight: 600; font-family: 'Gilroy', sans-serif;
     }
     .s-btn-sec {
       background: #f2f0ef; border: 1.5px solid rgba(26,188,156,0.35);
       border-radius: 100px; padding: 9px 11px;
-      font-size: 0.65rem; font-weight: 500; font-family: 'DM Sans', sans-serif; color: var(--navy);
+      font-size: 0.65rem; font-weight: 500; font-family: 'Gilroy', sans-serif; color: var(--navy);
     }
 
-    .s-section-title { font-family: 'Syne', sans-serif; font-size: 0.7rem; font-weight: 700; margin-bottom: 7px; }
+    .s-section-title { font-family: 'GilroyLight', sans-serif; font-size: 0.7rem; font-weight: 700; margin-bottom: 7px; }
 
     .s-activity-item {
       display: flex; align-items: center; gap: 8px;
@@ -494,7 +512,7 @@
       width: 26px; height: 26px; border-radius: 50%;
       background: var(--teal); color: white;
       display: flex; align-items: center; justify-content: center;
-      font-family: 'Syne', sans-serif; font-size: 0.62rem; font-weight: 700; flex-shrink: 0;
+      font-family: 'GilroyLight', sans-serif; font-size: 0.62rem; font-weight: 300; flex-shrink: 0;
     }
     .s-item-name { font-size: 0.64rem; font-weight: 600; }
     .s-item-sub { font-size: 0.54rem; color: var(--gray); }
@@ -515,7 +533,7 @@
     .bubble-right { right: -94px; top:0 80px; animation: float 4s ease-in-out -2.5s infinite; }
     .b-label { font-size: 0.6rem; color: #ffffff; margin-bottom: 1px; }
 
-    .b-val { font-family: 'Syne', sans-serif; font-size: 0.95rem; font-weight: 700; color: var(--teal); }
+    .b-val { font-family: 'GilroyLight', sans-serif; font-size: 0.95rem; font-weight: 700; color: var(--teal); }
 
     /* DOWNLOAD BUTTONS */
     .download-group { display: flex; gap: 14px; flex-wrap: wrap; justify-content: center; position: relative; }
@@ -651,6 +669,7 @@
       margin-bottom: 16px;
     }
     .tier-features li {
+      font-family: 'GilroyRegular', sans-serif;
       font-size: 0.82rem;
       padding: 5px 0;
       border-bottom: 1px solid rgba(0,0,0,0.07);
@@ -677,7 +696,7 @@
       border: none;
       border-radius: 100px;
       padding: 10px 24px;
-      font-family: 'DM Sans', sans-serif;
+      font-family: 'Gilroy', sans-serif;
       font-size: 0.82rem;
       font-weight: 600;
       cursor: pointer;
@@ -754,7 +773,7 @@
       color: rgba(23,165,137,0.7);
       text-align: center;
       margin-top: 18px;
-      font-family: 'DM Sans', sans-serif;
+      font-family: 'Gilroy', sans-serif;
       text-transform: uppercase;
       position: relative;
       z-index: 1;
@@ -765,7 +784,7 @@
       color: rgba(201,162,39,0.8);
       text-align: center;
       margin-top: 18px;
-      font-family: 'DM Sans', sans-serif;
+      font-family: 'Gilroy', sans-serif;
       text-transform: uppercase;
       position: relative;
       z-index: 1;
@@ -829,7 +848,7 @@
       color: rgba(255,255,255,0.55);
       text-align: center;
       margin-top: 18px;
-      font-family: 'DM Sans', sans-serif;
+      font-family: 'Gilroy', sans-serif;
       text-transform: uppercase;
       position: relative;
       z-index: 1;
@@ -907,7 +926,7 @@
       transition: color 0.5s ease;
     }
     .lb-sub {
-      font-family: 'DM Sans', sans-serif;
+      font-family: 'Gilroy', sans-serif;
       font-size: clamp(1rem, 1.3vw, 1.2rem);
       font-weight: 300;
       color: var(--navy);
@@ -917,7 +936,7 @@
       transition: color 0.5s ease;
     }
     .lb-blurb {
-      font-family: 'DM Sans', sans-serif;
+      font-family: 'Gilroy', sans-serif;
       font-size: clamp(1rem, 1.3vw, 1.2rem);
       font-weight: 300;
       color: var(--navy);
@@ -970,7 +989,7 @@
     .lb-pod-2 .lb-pod-avatar { border-color: #9ca3af; background: #f3f4f6; color: #6b7280; }
     .lb-pod-3 .lb-pod-avatar { border-color: #b97333; background: #fdf0e3; color: #92581a; }
     .lb-pod-rank {
-      font-family: 'Syne', sans-serif;
+      font-family: 'GilroyLight', sans-serif;
       font-size: 0.72rem;
       font-weight: 800;
       color: var(--gray);
@@ -986,7 +1005,7 @@
       transition: color 0.5s ease;
     }
     .lb-pod-score {
-      font-family: 'Syne', sans-serif;
+      font-family: 'GilroyLight', sans-serif;
       font-size: 0.8rem;
       font-weight: 700;
       color: var(--teal-dark);
@@ -1013,7 +1032,7 @@
     }
     .lb-row:hover { background: var(--teal-light); transform: translateX(4px); }
     .lb-rnum {
-      font-family: 'Syne', sans-serif;
+      font-family: 'GilroyLight', sans-serif;
       font-size: 0.82rem;
       font-weight: 800;
       color: var(--gray);
@@ -1061,7 +1080,7 @@
       transition: background 0.5s ease;
     }
     .lb-rscore {
-      font-family: 'Syne', sans-serif;
+      font-family: 'GilroyLight', sans-serif;
       font-size: 0.82rem;
       font-weight: 700;
       color: var(--teal-dark);
@@ -1140,14 +1159,14 @@
     }
     .exp-info { flex: 1; }
     .exp-name {
-      font-family: 'Syne', sans-serif;
+      font-family: 'GilroyLight', sans-serif;
       font-weight: 700;
       font-size: 0.9rem;
       color: var(--navy);
     }
     .exp-meta { font-size: 0.72rem; color: var(--gray); margin-top: 2px; }
     .exp-amount {
-      font-family: 'Syne', sans-serif;
+      font-family: 'GilroyLight', sans-serif;
       font-size: 1.4rem;
       font-weight: 800;
       color: var(--navy);
@@ -1198,7 +1217,7 @@
       border-radius: 50%;
       background: var(--teal);
       color: white;
-      font-family: 'Syne', sans-serif;
+      font-family: 'GilroyLight', sans-serif;
       font-size: 0.6rem;
       font-weight: 700;
       display: flex;
@@ -1209,7 +1228,7 @@
     .exp-person.pending .exp-avatar { background: #e5e5e5; color: var(--gray); }
     .exp-person-name { font-size: 0.76rem; font-weight: 600; color: var(--navy); }
     .exp-person-amt {
-      font-family: 'Syne', sans-serif;
+      font-family: 'GilroyLight', sans-serif;
       font-size: 1.05rem;
       font-weight: 800;
       color: var(--navy);
@@ -1225,7 +1244,7 @@
       border-radius: 100px;
     }
     .exp-status.paid { background: rgba(26,188,156,0.12); color: var(--teal-dark); }
-    .exp-status.pending { background: rgba(0,0,0,0.05); color: var(--gray); }
+    .exp-status.pending { background: rgba(234,179,8,0.12); color: #b45309; }
 
     /* Progress bar card */
     .exp-progress {
@@ -1242,7 +1261,7 @@
     }
     .exp-progress-label { font-size: 0.72rem; color: var(--gray); }
     .exp-progress-vals {
-      font-family: 'Syne', sans-serif;
+      font-family: 'GilroyLight', sans-serif;
       font-size: 0.72rem;
       font-weight: 700;
       color: var(--teal-dark);
@@ -1516,7 +1535,7 @@
       <div class="exp-progress">
         <div class="exp-progress-header">
           <span class="exp-progress-label">Collected</span>
-          <span class="exp-progress-vals">$42 of $84</span>
+          <span class="exp-progress-vals">$42 | $84</span>
         </div>
         <div class="exp-progress-bar">
           <div class="exp-progress-fill"></div>
