--- a/privacy.html
+++ b/privacy.html
@@ -5,8 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Privacy Policy — Divvum</title>
   <link rel="icon" type="image/avif" href="il_1080xN.1090093355_g454.avif" />
-  <link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=DM+Sans:wght@300;400;500&display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&display=swap" rel="stylesheet"/>
   <style>
+    @font-face {
+      font-family: 'Gilroy';
+      src: url('Gilroy-Medium.ttf') format('truetype');
+      font-weight: 500;
+      font-style: normal;
+    }
     *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
 
     :root {
@@ -27,7 +33,7 @@
     }
 
     body {
-      font-family: 'DM Sans', sans-serif;
+      font-family: 'Gilroy', sans-serif;
       background: var(--bg-primary);
       color: var(--text-primary);
       min-height: 100vh;
@@ -109,7 +115,7 @@
     }
 
     h2 {
-      font-family: 'DM Sans', sans-serif;
+      font-family: 'Gilroy', sans-serif;
       font-size: 1.2rem;
       font-weight: 800;
       color: var(--text-primary);
@@ -118,7 +124,7 @@
     }
 
     h3 {
-      font-family: 'DM Sans', sans-serif;
+      font-family: 'Gilroy', sans-serif;
       font-size: 1rem;
       font-weight: 700;
       color: var(--text-primary);
