your message here

--- a/index.html
+++ b/index.html
@@ -1731,8 +1731,8 @@
     </div>
     <div class="lb-tagline">
       <h2 class="lb-heading">Leader<br>board</h2>
-      <p class="lb-sub">See how your repayment score stacks up in your circle.</p>
-      <p class="lb-blurb">Track repayment habits across your group in real time. Your score climbs every time you settle up — and drops when you don't.</p>
+      <p class="lb-sub">See how your Divvum score stacks up in your circle.</p>
+      <p class="lb-blurb">Track repayment habits across your group in real time. Your score climbs every time you settle up and instant transfer.</p>
     </div>
     <div class="lb-blend lb-blend-default"></div>
   </section>
