your message here

--- a/index.html
+++ b/index.html
@@ -1305,6 +1305,7 @@
       .bubble { display: none; }
 
       /* Hero */
+      .welcome-tagline, .welcome-sub { display: none; }
       main { padding: 40px 24px 32px; }
       h1 { font-size: clamp(1.9rem, 9vw, 2.6rem); margin-bottom: 12px; line-height: 1.12; }
       .sub { font-size: 0.88rem; margin-bottom: 28px; max-width: 100%; }
