--- a/privacy.html
+++ b/privacy.html
@@ -13,6 +13,12 @@
       font-weight: 500;
       font-style: normal;
     }
+    @font-face {
+      font-family: 'GilroyBold';
+      src: url('Gilroy-Bold.ttf') format('truetype');
+      font-weight: 700;
+      font-style: normal;
+    }
     *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
 
     :root {
@@ -95,11 +101,11 @@
     }
 
     h1 {
-      font-family: 'Syne', sans-serif;
+      font-family: 'GilroyBold', sans-serif;
       font-size: 2.5rem;
-      font-weight: 800;
+      font-weight: 700;
       margin-bottom: 24px;
-      color: var(--teal);
+      color: var(--text-primary);
     }
 
     p {
