your message here

--- a/index.html
+++ b/index.html
@@ -1405,7 +1405,7 @@
 <body>
 
   <nav>
-    <div class="logo">DIVVUM</div>
+    <a class="logo" href="https://divvum.app" style="text-decoration:none;">DIVVUM</a>
 
     <div class="nav-pill">
       <div class="dot"></div>
