your message here

--- a/terms.html
+++ b/terms.html
@@ -211,7 +211,7 @@
 <body>
 
   <nav>
-    <a href="index.html" class="logo">DIVVUM</a>
+    <a href="https://divvum.app" class="logo">DIVVUM</a>
 
     <div class="nav-pill">
       <div class="dot"></div>
