--- a/index.html
+++ b/index.html
@@ -1445,8 +1445,8 @@
             </div>
 
             <div class="welcome-body">
-              <div class="welcome-tagline">Split smarter.<br>Settle faster. 🤝</div>
-              <div class="welcome-sub">No awkward IOUs. Divvum makes splitting expenses with friends effortless.</div>
+              <div class="welcome-tagline">Split smarter<br>Settle faster</div>
+              <div class="welcome-sub">Divvum makes splitting expenses with friends speedy &amp; effortless.</div>
 
               <button class="auth-btn btn-apple">
                 <svg class="btn-icon" viewBox="0 0 22 22" fill="white"><path d="M17.05 20.28c-.98.95-2.05.8-3.08.35-1.09-.46-2.09-.48-3.24 0-1.44.62-2.2.44-3.06-.35C2.79 15.25 3.51 7.7 9.05 7.42c1.32.07 2.22.74 2.98.8 1.14-.23 2.23-.93 3.44-.84 1.46.12 2.56.7 3.28 1.8-3.01 1.8-2.3 5.77.3 6.88-.57 1.52-1.31 3.01-2 4.22zM13 3.5c.18 1.76-1.29 3.2-2.98 3.36C9.8 5.1 11.36 3.5 13 3.5z"/></svg>
