--- a/index.html
+++ b/index.html
@@ -985,7 +985,9 @@
       width: 58px;
       height: 58px;
     }
+    .lb-pod-avatar { overflow: hidden; }
     .lb-pod-avatar svg { width: 52%; height: 52%; }
+    .lb-pod-avatar img { width: 100%; height: 100%; object-fit: cover; display: block; }
     .lb-pod-1 .lb-pod-avatar {
       width: 76px;
       height: 76px;
@@ -1064,7 +1066,9 @@
       flex-shrink: 0;
       transition: background 0.5s ease, border-color 0.5s ease, color 0.5s ease;
     }
+    .lb-ravatar { overflow: hidden; }
     .lb-ravatar svg { width: 52%; height: 52%; }
+    .lb-ravatar img { width: 100%; height: 100%; object-fit: cover; display: block; }
     .lb-rname {
       font-size: 0.85rem;
       font-weight: 600;
@@ -1671,7 +1675,7 @@
 
         <div class="lb-pod lb-pod-2">
           <div class="lb-pod-avatar">
-            <svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 11a4 4 0 1 0 0-8 4 4 0 0 0 0 8zm-7 9a7 7 0 0 1 14 0H5z"/></svg>
+            <img src="https://i.pravatar.cc/150?img=33" alt="Alex M." />
           </div>
           <div class="lb-pod-rank">2</div>
           <div class="lb-pod-name">Alex M.</div>
@@ -1681,7 +1685,7 @@
         <div class="lb-pod lb-pod-1">
           <div class="lb-pod-crown">♛</div>
           <div class="lb-pod-avatar">
-            <svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 11a4 4 0 1 0 0-8 4 4 0 0 0 0 8zm-7 9a7 7 0 0 1 14 0H5z"/></svg>
+            <img src="https://i.pravatar.cc/150?img=11" alt="Brennan W." />
           </div>
           <div class="lb-pod-rank">1</div>
           <div class="lb-pod-name">Brennan W.</div>
@@ -1690,7 +1694,7 @@
 
         <div class="lb-pod lb-pod-3">
           <div class="lb-pod-avatar">
-            <svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 11a4 4 0 1 0 0-8 4 4 0 0 0 0 8zm-7 9a7 7 0 0 1 14 0H5z"/></svg>
+            <img src="https://i.pravatar.cc/150?img=45" alt="Sam R." />
           </div>
           <div class="lb-pod-rank">3</div>
           <div class="lb-pod-name">Sam R.</div>
@@ -1704,7 +1708,7 @@
 
         <div class="lb-row">
           <span class="lb-rnum">4</span>
-          <div class="lb-ravatar"><svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 11a4 4 0 1 0 0-8 4 4 0 0 0 0 8zm-7 9a7 7 0 0 1 14 0H5z"/></svg></div>
+          <div class="lb-ravatar"><img src="https://i.pravatar.cc/150?img=7" alt="Chris T." /></div>
           <span class="lb-rname">Chris T.</span>
           <div class="lb-rbar"><div class="lb-rbar-fill" style="width:61%"></div></div>
           <span class="lb-rscore">731 scr</span>
@@ -1712,7 +1716,7 @@
 
         <div class="lb-row">
           <span class="lb-rnum">5</span>
-          <div class="lb-ravatar"><svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 11a4 4 0 1 0 0-8 4 4 0 0 0 0 8zm-7 9a7 7 0 0 1 14 0H5z"/></svg></div>
+          <div class="lb-ravatar"><img src="https://i.pravatar.cc/150?img=15" alt="Derrick P." /></div>
           <span class="lb-rname">Derrick P.</span>
           <div class="lb-rbar"><div class="lb-rbar-fill" style="width:53%"></div></div>
           <span class="lb-rscore">644 scr</span>
@@ -1720,7 +1724,7 @@
 
         <div class="lb-row">
           <span class="lb-rnum">6</span>
-          <div class="lb-ravatar"><svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 11a4 4 0 1 0 0-8 4 4 0 0 0 0 8zm-7 9a7 7 0 0 1 14 0H5z"/></svg></div>
+          <div class="lb-ravatar"><img src="https://i.pravatar.cc/150?img=26" alt="Morgan L." /></div>
           <span class="lb-rname">Morgan L.</span>
           <div class="lb-rbar"><div class="lb-rbar-fill" style="width:44%"></div></div>
           <span class="lb-rscore">528 scr</span>
@@ -1728,7 +1732,7 @@
 
         <div class="lb-row">
           <span class="lb-rnum">7</span>
-          <div class="lb-ravatar"><svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 11a4 4 0 1 0 0-8 4 4 0 0 0 0 8zm-7 9a7 7 0 0 1 14 0H5z"/></svg></div>
+          <div class="lb-ravatar"><img src="https://i.pravatar.cc/150?img=48" alt="Taylor W." /></div>
           <span class="lb-rname">Taylor W.</span>
           <div class="lb-rbar"><div class="lb-rbar-fill" style="width:37%"></div></div>
           <span class="lb-rscore">441 scr</span>
@@ -1736,7 +1740,7 @@
 
         <div class="lb-row">
           <span class="lb-rnum">8</span>
-          <div class="lb-ravatar"><svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 11a4 4 0 1 0 0-8 4 4 0 0 0 0 8zm-7 9a7 7 0 0 1 14 0H5z"/></svg></div>
+          <div class="lb-ravatar"><img src="https://i.pravatar.cc/150?img=57" alt="Jamie S." /></div>
           <span class="lb-rname">Jamie S.</span>
           <div class="lb-rbar"><div class="lb-rbar-fill" style="width:29%"></div></div>
           <span class="lb-rscore">348 scr</span>
@@ -1744,7 +1748,7 @@
 
         <div class="lb-row">
           <span class="lb-rnum">9</span>
-          <div class="lb-ravatar"><svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 11a4 4 0 1 0 0-8 4 4 0 0 0 0 8zm-7 9a7 7 0 0 1 14 0H5z"/></svg></div>
+          <div class="lb-ravatar"><img src="https://i.pravatar.cc/150?img=62" alt="Drew H." /></div>
           <span class="lb-rname">Drew H.</span>
           <div class="lb-rbar"><div class="lb-rbar-fill" style="width:21%"></div></div>
           <span class="lb-rscore">254 scr</span>
