your message here

--- a/index.html
+++ b/index.html
@@ -1015,15 +1015,7 @@
     }
     .lb-pod-2 .lb-pod-avatar { border-color: #9ca3af; background: #f3f4f6; color: #6b7280; }
     .lb-pod-3 .lb-pod-avatar { border-color: #b97333; background: #fdf0e3; color: #92581a; }
-    .lb-pod-rank {
-      font-family: 'GilroyBold', sans-serif;
-      font-size: 0.72rem;
-      font-weight: 800;
-      color: var(--gray);
-    }
-    .lb-pod-1 .lb-pod-rank { color: #c9a227; font-size: 0.8rem; }
-    .lb-pod-2 .lb-pod-rank { color: #9ca3af; }
-    .lb-pod-3 .lb-pod-rank { color: #b97333; }
+    .lb-pod-rank { display: none; }
     .lb-pod-name {
       font-family: 'GilroyBlack', sans-serif;
       font-size: 0.78rem;
@@ -1041,6 +1033,50 @@
     .lb-pod-1 .lb-pod-score { color: #c9a227; }
     .lb-pod-2 .lb-pod-score { color: #9ca3af; }
     .lb-pod-3 .lb-pod-score { color: #b97333; }
+
+    /* Podium 3D platform */
+    .lb-pod-base {
+      position: relative;
+      width: 84px;
+      border-radius: 6px 6px 0 0;
+      margin-top: 6px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-family: 'GilroyBlack', sans-serif;
+      font-size: 2.2rem;
+      color: rgba(255,255,255,0.55);
+      letter-spacing: -0.02em;
+    }
+    /* Top face — parallelogram via skewX */
+    .lb-pod-base::before {
+      content: '';
+      position: absolute;
+      top: -10px;
+      left: 0; right: 0;
+      height: 10px;
+      border-radius: 4px 4px 0 0;
+      transform: skewX(-45deg);
+      transform-origin: bottom left;
+    }
+    .lb-pod-1 .lb-pod-base {
+      height: 76px;
+      background: #f59e0b;
+      box-shadow: 10px 10px 0 #92400e;
+    }
+    .lb-pod-1 .lb-pod-base::before { background: #fde68a; }
+    .lb-pod-2 .lb-pod-base {
+      height: 52px;
+      background: #94a3b8;
+      box-shadow: 10px 10px 0 #334155;
+    }
+    .lb-pod-2 .lb-pod-base::before { background: #e2e8f0; }
+    .lb-pod-3 .lb-pod-base {
+      height: 34px;
+      background: #b97333;
+      box-shadow: 10px 10px 0 #7c3f0e;
+    }
+    .lb-pod-3 .lb-pod-base::before { background: #d4956a; }
 
     /* List */
     .lb-list {
@@ -1699,9 +1735,9 @@
           <div class="lb-pod-avatar">
             <img src="https://i.pravatar.cc/150?img=33" alt="Alex" />
           </div>
-          <div class="lb-pod-rank">2</div>
           <div class="lb-pod-name">Alex</div>
           <div class="lb-pod-score">982 scr</div>
+          <div class="lb-pod-base">2</div>
         </div>
 
         <div class="lb-pod lb-pod-1">
@@ -1709,18 +1745,18 @@
           <div class="lb-pod-avatar">
             <img src="https://i.pravatar.cc/150?img=11" alt="Brennan" />
           </div>
-          <div class="lb-pod-rank">1</div>
           <div class="lb-pod-name">Brennan</div>
           <div class="lb-pod-score">1,204 scr</div>
+          <div class="lb-pod-base">1</div>
         </div>
 
         <div class="lb-pod lb-pod-3">
           <div class="lb-pod-avatar">
             <img src="https://i.pravatar.cc/150?img=45" alt="Sam" />
           </div>
-          <div class="lb-pod-rank">3</div>
           <div class="lb-pod-name">Sam</div>
           <div class="lb-pod-score">847 scr</div>
+          <div class="lb-pod-base">3</div>
         </div>
 
       </div>
